--- a/fruit_ninja/src/app/animals/animals.component.html
+++ b/fruit_ninja/src/app/animals/animals.component.html
@@ -1,1 +1,9 @@
 <p>animals works!</p>
+<div class="row m-2">
+<div class="col border" *ngFor="let animal of animals"> 
+   <div>
+    {{animal.emoji}}
+        <div class="text-info">{{animal.name}} </div>
+   </div> 
+</div>
+</div>
