--- a/fruit_ninja/src/app/fruits/fruits.component.html
+++ b/fruit_ninja/src/app/fruits/fruits.component.html
@@ -1,1 +1,10 @@
 <p>fruits works!</p>
+
+<div class="row m-2">
+    <div class="col border" *ngFor="let fruit of fruits"> 
+       <div>
+        {{fruit.emoji}}
+            <div class="text-info">{{fruit.name}} </div>
+       </div> 
+    </div>
+    </div>
